agregué HTML básico

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-palabra
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+  </body>
+</html>
