aquí agrugué main css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="/css/main.css" media="screen" title="no title">
   </head>
   <body>
 tercer prueba     Cambiando y haciendo pruebas
