--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="/css/main.css" media="screen" title="no title">
   </head>
   <body>
-tercer prueba     Cambiando y haciendo pruebas
+    pruebas para hacer ramas1
   </body>
 </html>
